2009-02-13  Brian Pepple  <bpepple@fedoraproject.org>

	* Makefile.am:
	Remove intltool-* from Makefile.am to make it work with newer intltool.

2009-02-11  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c:
	* src/twitux-tweet-list.c:
	Plug a leak with some pixbufs, and set the size of
	avatar pixbuf.  (Patch provided by Kaity G. B.)

2009-01-31  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: Bugfix to Add/Remove friends methods,
	that are not working at all (#2109409 and LP #).

2009-01-25  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.69.

2009-01-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.[ch] (twitux_app_notify_sound): 
	* src/twitux-parser.c (twitux_parser_timeline): 
	Move the sound notification to a seperate function,
	so that we don't play sound for each new tweet.

2009-01-22  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c (twitux_app_show_notification):
	Plug leak, and use better notification defaults.

2009-01-21  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/twitux-send-message-dialog.c (message_set_characters_available):
	Show character count over the 140 character maximum as '-n'. (#1961611)

2009-01-21  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c:
	* src/twitux-parser.[ch]: 
	Load the timeline from memory, and don't bother saving
	a local copy. Plug a few memory leaks also.

2009-01-18  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.[ch] (twitux_app_show_notification): 
	* src/twitux-parser.c (twitux_parser_timeline): 
	Display messages in notification. (Patch provided by Thomas Thurman)

2009-01-11  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux.h:
	* src/twitux-network.[ch]:
	Use https instead of http. (Evan McClain)

2009-01-01  Brian Pepple  <bpepple@fedoraproject.org>
	
	* src/twitux-parser.c (parser_convert_time):
	Fix incorrect pluralising of relative time. (Deskin Miller)
